AddOpens wip replacement